@@ -1,5 +1,9 @@
 2004-04-03  Elliott Hughes  <enh@acm.org>
 
+	* src/error.cpp: Correctly fix the text of *all* package-related errors.
+
+2004-04-03  Elliott Hughes  <enh@acm.org>
+
 	* src/diagnose.cpp, src/error.cpp: Fix +D so that it outputs the correct
 	column numbers, instead of always reporting column 0 because we hadn't
 	re-read the input to be able to translate token indexes into column
